paryty-v1.0/deploy/kubernetes/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paryty-frontend
  labels:
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  type: ClusterIP
